--- a/public/index.html
+++ b/public/index.html
@@ -870,7 +870,7 @@ Webcam management = selects which camera to Sync
     <a href="#mailscanner">mail</a>
     <a href="#gatewayfs">gateways</a>
   </div>
-  <fieldset id="gatewayfs" class="gatewayfs">
+  <fieldset id="gatewayfs" class="gatewayfs" hidden>
     <div class="fstitle">
       Gateway <span id="gwloader"> - loading</span>
     </div><br>
