--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@ Webcam management = selects which camera to Sync
       }, 300)
 
       setTimeout(function() {
-        getNetworks()
+        //getNetworks()
       }, 600)
 
       setTimeout(function() {
