--- a/public/index.html
+++ b/public/index.html
@@ -865,10 +865,10 @@ Webcam management = selects which camera to Sync
     </span>
     <a id="notifications"><span id="badgecount"></span><i class="material-icons">message</i></a>
     <a id="config"><i class="material-icons">settings</i></a>
-    <a href="#webcams">cams</a>
-    <a href="#syncs">syncs</a>
-    <a href="#mailscanner">mail</a>
-    <a href="#gatewayfs">gateways</a>
+    <a hidden href="#webcams">cams</a>
+    <a href="#legacy">syncs</a>
+    <a hidden href="#mailscanner">mail</a>
+    <a hidden href="#gatewayfs">gateways</a>
   </div>
   <fieldset id="gatewayfs" class="gatewayfs" hidden>
     <div class="fstitle">
