--- a/public/index.html
+++ b/public/index.html
@@ -934,7 +934,7 @@ Webcam management = selects which camera to Sync
   <fieldset id="" class="fiddy" style="display:none">
 
   </fieldset>
-  <fieldset id="legacy" class="fiddy">
+  <fieldset id="legacy" class="fiddy" style="margin-top:58px">
     <div class="fstitle">
       Sync Functions
     </div><br>
